force-app/main/default/objects/PricebookEntry/fields/CWS_CostPrice__c.field-meta.xml
<CustomField>
    <fullName>CWS_CostPrice__c</fullName>
    <label>CostPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>