force-app/main/default/objects/PricebookEntry/fields/CWS_Exception_Costprice__c.field-meta.xml
<CustomField>
    <fullName>CWS_Exception_Costprice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be checked if the default value of the costprice was blank or zero</description>
    <label>Exception Costprice</label>
    <type>Checkbox</type>
</CustomField>