force-app/main/default/objects/PricebookEntry/fields/CWS_Exception_Pricing__c.field-meta.xml
<CustomField>
    <fullName>CWS_Exception_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will determine whether the pricebookentry is eligible for automatic price calculations based on batch whenever exchange rates are changed.</description>
    <label>Exception Pricing</label>
    <type>Checkbox</type>
</CustomField>