force-app/main/default/objects/PricebookEntry/fields/CWS_Price_Modified__c.field-meta.xml
<CustomField>
    <fullName>CWS_Price_Modified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates price is modified for price book entry</description>
    <inlineHelpText>Indicates price is modified for price book entry</inlineHelpText>
    <label>Price Modified</label>
    <type>Checkbox</type>
</CustomField>