force-app/main/default/objects/PricebookEntry/fields/CWS_Product_Recordtype_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Recordtype_Developer_Name__c</fullName>
    <description>Used in pre-pipeline opportunity flow</description>
    <formula>Product2.RecordType.DeveloperName</formula>
    <label>Product Recordtype Developer Name</label>
    <type>Text</type>
</CustomField>